--- a/styles.css
+++ b/styles.css
@@ -84,13 +84,14 @@ body,
 .secsix {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 125px;
+  padding: 150px;
   background-color:  #2A292B;
   cursor: pointer;
-  height: 50vh;
-  height: 100%;
+  height: 70vh;
+  /* height: 100%; */
   justify-content: center;
   align-items: center;
+ 
 }
 
 ul, li {
