--- a/styles.css
+++ b/styles.css
@@ -746,3 +746,25 @@ body,
 .work-item-container2:hover {
   transform: scale(1.1); /* Scale up the container on hover */
 }
+
+/* CSS for the bouncing animation */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+/* CSS for the bouncing animation */
+.arrow span {
+  display: inline-block;
+  cursor: pointer;
+  animation: bounce 1s infinite;
+
+}
+
