--- a/styles.css
+++ b/styles.css
@@ -467,6 +467,7 @@ body,
 
 
 @media (max-width: 768px) {
+  
   .row,
   .content4 {
     /* display: flex; */
@@ -492,12 +493,14 @@ body,
   .FiverrImg,
   .ClientImg,
   .item img {
-    width: 100%;
+    width: 75%;
     height: auto;
     border-radius: 20px;
   }
 
- 
+ .right-contentitem{
+  font-size: 10px;
+ }
 }
 
 .secfive {
