--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,8 @@ body,
 
 /* Media query for smaller screens (e.g., mobile) */
 @media (max-width: 768px) {
+
+
   .nav-links {
       display: none; /* Hide the regular navigation links */
   }
@@ -152,6 +154,7 @@ body,
   justify-content: center;
   align-items: center;
   overflow: hidden; /* Hide overflowing content */
+  
 }
 
 /* CSS for the overlay */
@@ -244,11 +247,14 @@ body,
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
-
+  .container {
+    overflow-x: auto;
+  }
   .secone {
     
       padding: 0px;
       font-size: 24px;
+      
   }
   .sectwo {
     
