--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body,
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 20px;
  }
  
 
@@ -78,7 +79,7 @@ body,
   border-color: #333;
   background-color: #333;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0px;
 }
 
 
@@ -182,7 +183,7 @@ body,
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 100vh;
+  height: 70vh;
 }
 
 .content3{
@@ -371,7 +372,7 @@ body,
 }
 
 .img {
-  max-width: 75%;
+  max-width: 100%;
   height: auto;
   border-radius: 20px;
 }
@@ -383,17 +384,18 @@ body,
 }
 
 .skills span {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   margin-right: 5px;
-  margin-bottom: 10px;
-  padding: 2px;
+  /* margin-bottom: 10px; */
+  /* padding: 2px; */
+  /* line-height: 1.5; */
 }
 
 .secthree{
   padding: 50px;
   height: 100%;
   
-  background-color: #C1AD8A;
+  background-color: #333;
   color: white;
   text-align: center;
   justify-content: center;
@@ -424,7 +426,7 @@ body,
 .work-item {
   position: relative;
   overflow: hidden;
-  
+  border-radius: 10px;
   width: 100%;
   max-width: 400px;
   background-color: #484547;
@@ -565,12 +567,15 @@ body,
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 
 .InterestImg,
 .interest-item img {
+  border-radius: 10px;
   max-width: 100%;
   height: 50vh;
+
 }
 
 .content5 {
