--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ body,
   justify-content: center;
   align-items: center;
   text-align: center;
- 
+  margin-bottom: 125px;
 }
 
 /* CSS for text in Section 2 */
@@ -375,6 +375,7 @@ body,
   max-width: 100%;
   height: auto;
   border-radius: 20px;
+  width: 75%;
 }
 
 .skills {
@@ -541,6 +542,9 @@ body,
   text-align: center;
   margin-left: 10px;
  }
+ .InterestImg{
+  height: 15vh;
+ }
 }
 
 .secfive {
@@ -563,7 +567,7 @@ body,
 
 .interest-item {
   text-align: center;
-  padding: 25px;
+  padding: 15px;
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
@@ -575,6 +579,7 @@ body,
   border-radius: 10px;
   max-width: 100%;
   height: 50vh;
+  width: 38vh;
 
 }
 
