--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ body,
 
   .content3{
     height: 100%;
-    padding: 50px;
+    padding: 25px;
     margin: 0;
   }
   .content3 a{
@@ -373,6 +373,7 @@ body,
     align-items: center;
     text-align: center;
     font-size: 20px;
+    line-height: 2.5;
   }
   .right-content{
     margin-right: 0px;
@@ -559,8 +560,8 @@ body,
   }
 
  .right-contentitem p{
-  font-size: 10px;
-  text-align: center;
+  font-size: 15px;
+  text-align: justify;
   margin-left: 10px;
  }
  /* .InterestImg{
