--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ body,
 
 /* Media query for smaller screens (e.g., mobile) */
 @media (max-width: 768px) {
-
+  
 
   .nav-links {
       display: none;
@@ -453,8 +453,11 @@ body,
 .WorkImg {
   max-width: 100%;
   height: 100%;
+ 
+
   
 }
+
 
 .overlay-text {
   position: absolute;
@@ -532,6 +535,10 @@ body,
   .content5 a{
     font-size: 10px;
     padding: 0;
+  }
+  .work-item a picture img{
+
+    display: flex;
   }
   
   .row,
